# utaaf

./: .dockerignore  .env.example  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yml  entrypoint-docker.sh  package-lock.json  package.json  pr_on_main.yml
.github/: .release-please-config.json  release-please-config.json
.github/workflows/: pr_on_main.yml  push_and_pr_on_main.yml  push_on_main.yml
client/: main.html
rust/: Cargo.toml  rust-toolchain.toml
rust/src/: ascii.rs  main.rs  server.rs
rust/src/ascii/: generator.rs  structs.rs  utils.rs
rust/src/ascii/utils/: average.rs  chars.rs
rust/src/server/: create.rs  handle.rs  payload.rs  structs.rs
src/: app.controller.ts  app.module.ts  app.service.ts  customException.ts  filters.allExceptions.ts  main.ts  url.dto.ts  validation.pipe.ts
src/images/interfaces/: image.interface.ts
src/images/services/: image.service.ts
src/middlewares/: logger.middleware.ts
src/pipes/: urValidation.pipe.ts
src/types/: request.ts
src/utils/: fetchAndSave.ts
test/: app.e2e-spec.ts
typescript/: .gitignore  package-lock.json  package.json
typescript/client/: main.html
typescript/src/: app.controller.ts  app.module.ts  app.service.ts  configuration.schema.ts  index.ts  main.ts  result.ts
typescript/src/dto/: incoming.dto.ts  response.dto.ts  url.dto.ts
typescript/src/images/: types.ts
typescript/src/pipes/: urValidation.pipe.ts  urlValidation.pipe.spec.ts
typescript/src/types/: incoming.ts  request.ts
typescript/src/unix_socket/: socket.service.ts  types.ts
(+4 files in other folders)
