[package]
name = "rust"
version = "1.0.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "ico", "webp"] }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] } 
